MOD: fix ignored files
Files paket ignores were scattered about, put them in the same spot
ignore Paket.Unity3d files that get installed in unity3d
added paket.unity3d

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+
 # ---------------[ Unity generated ]------------------ #
 Temp/
 #Obj/
@@ -104,6 +106,9 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+#paket
+Paket.Unity3D
+Paket.Unity3D.meta
 mainproject/packages
 **/.paket/paket.exe
 **/.paket/paket.unity3d.exe
